--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -90,6 +90,9 @@
 }
 
 @media screen and (max-width: 768px) {
+    .header {
+        height: 80px;
+    }
     .burger-btn {
         @include mixins.flex-item($jc: center, $ai: center);
     }
@@ -97,7 +100,7 @@
     .nav {
         position: fixed;
         right: -100%;
-        top: 100px;
+        top: 80px;
         z-index: 100;
         background-color: white;
         @include mixins.size(100%, 100%);
