--- a/src/Pages/Map/MapFilters/MapFilters.scss
+++ b/src/Pages/Map/MapFilters/MapFilters.scss
@@ -11,7 +11,12 @@
         margin: 10px 0;
     }
     &__section {
-        margin-bottom: 30px;
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+        &.buttons {
+            @include mixins.flex-item($direction: column, $gap: 10px);
+        }
     }
 
     &__categories {
