--- a/src/Pages/Map/MapFilters/Places/Places.scss
+++ b/src/Pages/Map/MapFilters/Places/Places.scss
@@ -1,21 +1,28 @@
 @use '../../../../styles/variables';
 
 .combobox {
-    min-width: 330px;
+    min-width: 320px;
     max-width: 100%;
     background-color:#f4f4f4;
     border-radius: 10px;
-    padding-left: 15px;
 
     display: flex;
     margin-bottom: 15px;
+    position: relative;
+
+    & img {
+        position: absolute;
+        top: 47%;
+        left: 8px;
+        transform: translateY(-50%);
+    }
     
     &-input {
         min-width: 300px;
         width: 100%;
         height: 60px;
         border-radius: 10px;
-        padding: 0 10px;
+        padding: 0 20px 0 40px;
         background-color: #f4f4f4;
         font-size: 16px;
 
@@ -35,6 +42,10 @@
 }
 
 .clear-input {
+    position: absolute;
+    right: 40px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 101;
     cursor: pointer;
-    padding: 0 20px;
 }
