--- a/src/Pages/Map/Map.scss
+++ b/src/Pages/Map/Map.scss
@@ -3,8 +3,9 @@
 
 .map {
     @include mixins.flex-item($gap: 20px, $jc: space-between);
-    padding: 30px 0;
+    padding-top: 20px;
     flex-wrap: wrap;
+    max-height: calc(100vh - 120px);
 
     &__google-map {
         flex-grow: 1;
@@ -15,6 +16,17 @@
         flex-shrink: 1;
     }
 }
+
+@media screen and (max-width: 1200px){
+    .map {
+        max-height: fit-content;
+        
+    &__search-results {
+        margin-top: 30px;
+    }
+    }
+}
+
 
 @media screen and (max-width: 768px) {
     .map {
