--- a/src/common/Button/Button.scss
+++ b/src/common/Button/Button.scss
@@ -7,6 +7,7 @@
     height: 45px;
     text-transform: uppercase;
     font-size: 14px;
+    font-weight: 500;
     cursor: pointer;
     transition: 0.3s;
     
