--- a/src/common/Button/Button.scss
+++ b/src/common/Button/Button.scss
@@ -2,12 +2,7 @@
 @use '../../styles/variables';
 
 .btn {
-    border-radius: 10px;
-    min-width: 120px;
-    height: 45px;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 500;
+    @include mixins.button-styles-light;
     cursor: pointer;
     transition: 0.3s;
     
