--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -83,6 +83,71 @@ img {
     background: #a4a4a4;
 }
 
+.auth {
+    background: #f2f2f2;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+
+    &__title {
+        font-size: 30px;
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+
+    &__inner {
+        background: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+        border-radius: 20px;
+
+        padding: 40px;
+        box-shadow: 0px 0px 8px 0px rgba(134, 134, 134, 0.25);
+    }
+
+    &__role {
+        display: flex;
+        width: 100%;
+    }
+}
+
+.redirect {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+    &__btn {
+        font-weight: 600;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+.restore-pass {
+    font-size: 14px;
+    align-self: flex-end;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 540px){
+    .auth {
+        &__inner {
+            width: 100%;
+            height: fit-content;
+            padding-right: 15px;
+            padding-left: 15px;
+            border-radius: 0;
+        }
+    }
+}
+
 @media screen and (max-width: 425px){
     .container {
         padding: 0 10px;
