--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -106,13 +106,26 @@ img {
         gap: 15px;
         border-radius: 20px;
 
-        padding: 40px;
+        padding: 40px 40px 50px 40px;
         box-shadow: 0px 0px 8px 0px rgba(134, 134, 134, 0.25);
+        position: relative;
     }
 
     &__role {
         display: flex;
         width: 100%;
+    }
+
+    &__error {
+        color: #D12121;
+        background-color: #d121212f;
+        width: 100%;
+        height: 30px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
     }
 }
 
