--- a/src/Pages/Map/SearchResults/SearchResults.scss
+++ b/src/Pages/Map/SearchResults/SearchResults.scss
@@ -23,7 +23,7 @@
 }
 
 .card {
-    box-shadow: 0px 0px 8px 0px rgba(134, 134, 134, 0.25);
+    box-shadow: variables.$shadow;
     border-radius: 20px;
     border: 1px solid #f2f2f2;
     background: white;
