--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,4 +5,6 @@ $black: #1d1d1d;
 $grey-border: #9B9797;
 $light-grey: #e1e1e1;
 $dark-grey: #5f5f5f;
+
+$shadow: 0px 0px 8px 0px rgba(134, 134, 134, 0.25);
 $red: #D12121;
