--- a/src/Pages/Map/Map.scss
+++ b/src/Pages/Map/Map.scss
@@ -21,9 +21,12 @@
     .map {
         max-height: fit-content;
         
-    &__search-results {
-        margin-top: 30px;
     }
+}
+
+@media screen and (max-width: 1020px){
+    .map__search-results {
+        margin-top: 30px;
     }
 }
 
