--- a/src/common/Loader/Loader.scss
+++ b/src/common/Loader/Loader.scss
@@ -2,7 +2,8 @@
 @use '../../styles/variables';
 
 .loader-container {
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
