--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -115,18 +115,19 @@ img {
         display: flex;
         width: 100%;
     }
+}
 
-    &__error {
-        color: #D12121;
-        background-color: #d121212f;
-        width: 100%;
-        height: 30px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-    }
+.error {
+    color: #D12121;
+    border: 1px solid #D12121;
+    background-color: #d121211e;
+    width: 100%;
+    height: 48px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
 }
 
 .redirect {
