--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $black: #1d1d1d;
 $grey-border: #9B9797;
 $light-grey: #e1e1e1;
 $dark-grey: #5f5f5f;
+$grey-search-bg: #f4f4f4;
 
 $shadow: 0px 0px 8px 0px rgba(134, 134, 134, 0.25);
 $red: #D12121;
