--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $grey-border: #9B9797;
 $light-grey: #e1e1e1;
 $dark-grey: #5f5f5f;
 $grey-search-bg: #f4f4f4;
+$yellow: #FFCF80;
 
 $shadow: 0px 0px 8px 0px rgba(134, 134, 134, 0.25);
 $red: #D12121;
