--- a/src/Pages/Map/MapFilters/Places/Places.scss
+++ b/src/Pages/Map/MapFilters/Places/Places.scss
@@ -4,6 +4,7 @@
 .combobox {
     min-width: 320px;
     max-width: 100%;
+    height: 54px;
     background-color: variables.$grey-search-bg;
     border-radius: 10px;
 
@@ -12,6 +13,8 @@
     position: relative;
 
     & img {
+        height: 20px;
+        width: 20px;
         position: absolute;
         top: 47%;
         left: 8px;
@@ -21,9 +24,9 @@
     &-input {
         min-width: 300px;
         width: 100%;
-        height: 60px;
+        height: 100%;
         border-radius: 10px;
-        padding: 0 20px 0 40px;
+        padding: 15px 40px;
         font-size: 16px;
         background-color: inherit;
 
