--- a/src/Pages/Profile/Profile.scss
+++ b/src/Pages/Profile/Profile.scss
@@ -3,8 +3,8 @@
 
 .profile {
     background-color: #f6f6f6;
-    height: calc(100vh - 100px);
-    padding-top: 30px;
+    min-height: calc(100vh - 100px);
+    padding: 30px 0;
 
     &__inner {
         display: flex;
@@ -15,13 +15,13 @@
     &__section {
         background-color: white;
         border-radius: 20px;
-        padding: 30px 20px;
         box-shadow: variables.$shadow;
     }
 }
 
 .bio {
     flex: 1 0 30%;
+    padding: 30px 20px;
 
     &__image {
         position: relative;
@@ -99,8 +99,13 @@
     }
 }
 
-.tabs {
+.tabs-section {
     flex: 1 1 70%;
+}
+
+.no-data {
+    color: variables.$red;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 768px) {
