--- a/src/common/Chip/Chip.scss
+++ b/src/common/Chip/Chip.scss
@@ -7,6 +7,7 @@
     padding: 0 8px;
     height: 40px;
     text-transform: capitalize;
+    width: fit-content;
 
     display: flex;
     align-items: center;
